TODO
* add support for passing key directly to library
  - test if keys are valid ?
  - what about issue with key bit size
* bdetools: add support for passing the keys as base16 ?
* update msvscpp files
* add handling of BDE volumes with corrupt metadata, e.g. file header

* update manuals
* move free metadata to volume_close()
* check metadata number_of_volume_header_sectors ?
* debug print more volume header info

* libcaes
  - WinXP no AES support ?
  - WINAPI initialize provider only once - where to stick the init functions ?
  - wincrypt and EVP - make sure to pass block sized blocks ?

Optimizations
* pass values 32-bit to aes

Library
* add support for passing key directly to library
* add support for smart card + pin?
* add support for TPM ?

Test suite:
* add test scripts

Release:
* check debug output alignment
* automated tests - test suite
* msvscpp build
* check TODOs

Tools:
* bdeinfo
* bdeexport
* bdemount
  - implement ImDisk version for WINAPI
  - implement native MacOS-X version

Format:
* validation
* TPM encoded VMK ?
* VMK date time - change password on USB encrypted drive
* what is entry type 0x000b ?
* why does Windows hide the last 4096 bytes of the volume?

Test images:
* for Windows Vista, Windows 7, To Go, Windows 8

Validate test cases:
* AES 128
* AES 128 diffuser
* AES 256
* AES 256 diffuser
* recovery key
* clear key
* partial encrypted volume
* startup key

20121108
* updated dependecies

20120915
* added -X option to bdemount to pass sub system options
* updated bdemount man page

20120912
* updated dependecies
* changes for libcdata update

20120807
* updated dependecies

20120721
* added libcsplit
* updated dependecies
* updated msvscpp files
* switched library order in tools
* fixed issue in spec file

20120520
* libfdata update
* code clean up in bdetools

20120518
* updates for Windows 8 BDE volume

20120511
* fixes for dpkg files

20120510
* small changes
* worked on msvscpp files

20120509
* updated dependecies